# pugixml-playground

./: CMakeLists.txt  README.md  local-build.cmd
